# TapPD

./: .gitignore  ABOUT.md  DB_KONZEPT.md  OPTIMIZATION_PLAN.md  README.md  TECHNICAL_DETAILS.md  logging_config.py  main.py  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh
analysis/: signal_processing.py
assets/: generate_instructions.py  instructions_hand.key
capture/: __init__.py  base_capture.py  leap_capture.py  mock_capture.py  websocket_capture.py
data/: tappd_v1_backup.db
motor_tests/: base_test.py  config.py  finger_tapping.py  hand_open_close.py  hanoi_logic.py  pinch_detector.py  pronation_supination.py  recorder.py  rest_tremor.py  spatial_srt.py  srt_logic.py  test_config.yaml  tmt_logic.py  tower_of_hanoi.py  trail_making.py  tremor.py
storage/: database.py  session_store.py
tests/: conftest.py  test_concept_validation.py  test_database.py  test_migration.py
ui/: data_browser.py  detail_dialog.py  feature_meta.py  hanoi_screen.py  log_viewer.py  main_window.py  patient_detail_screen.py  patient_screen.py  results_screen.py  srt_screen.py  test_dashboard.py  test_screen.py  theme.py  tmt_screen.py
